# hj-round

./: .gitignore  Hellfile.py  Pipfile  README.md  pyproject.toml
Round Sans.ufo/glyphs/: A_.glif  A_.mod01.glif  A_.mod02.glif  A_.mod04.glif  A_.mod05.glif  A_.mod06.glif  A_.mod08.glif  A_.mod09.glif  B_.mod02.glif  B_.mod03.glif  B_.mod04.glif  B_.mod06.glif  B_.mod07.glif  B_.mod08.glif  B_.mod10.glif  C_.glif  C_.mod01.glif  C_.mod02.glif  C_.mod07.glif  C_.mod10.glif  Ccedilla_.glif  D_.mod03.glif  D_.mod04.glif  D_.mod05.glif  D_.mod10.glif  E_.mod02.glif  E_.mod03.glif  E_.mod05.glif  E_.mod06.glif  E_.mod08.glif  E_.mod10.glif  Ecircumflex_.glif  Egrave_.glif  F_.mod03.glif  F_.mod04.glif  F_.mod05.glif  F_.mod08.glif  F_.mod09.glif  G_.mod02.glif  G_.mod03.glif  (+213 more)
Round Serif.ufo/: features.fea  lib.plist
Round Serif.ufo/glyphs/: AE_.glif  A_.mod01.glif  A_.mod03.glif  A_.mod04.glif  A_.mod06.glif  A_.mod07.glif  A_.mod09.glif  A_.mod10.glif  A_.mod11.glif  Acircumflex_.glif  Atilde_.glif  B_.glif  B_.mod06.glif  B_.mod08.glif  B_.mod10.glif  B_.mod11.glif  C_.glif  C_.mod02.glif  C_.mod04.glif  C_.mod05.glif  C_.mod07.glif  C_.mod09.glif  D_.glif  D_.mod01.glif  D_.mod02.glif  D_.mod07.glif  D_.mod08.glif  E_.glif  E_.mod03.glif  E_.mod04.glif  E_.mod05.glif  E_.mod07.glif  E_.mod10.glif  Eacute_.glif  Edieresis_.glif  F_.glif  F_.mod03.glif  F_.mod04.glif  F_.mod05.glif  F_.mod07.glif  (+227 more)
lib/: autohint.py  dsig.py  fontmake.py  rename_file.py  woff.py  woff2.py
source/Round Sans.ufo/: fontinfo.plist  lib.plist
source/Round Serif.ufo/: fontinfo.plist
(+481 files in other folders)
